Bug 1250323 - Don't hide overflow-y on the pseudo class panel r=pbro
UltraBlame original commit: 35b992d5c3355bd3fbb62937a31bb57266df0897

--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -152,6 +152,13 @@ png
 )
 ;
 }
+/
+*
+Rule
+View
+Tabpanel
+*
+/
 #
 sidebar
 -
@@ -216,6 +223,168 @@ position
 absolute
 ;
 }
+/
+*
+Rule
+View
+Toolbar
+*
+/
+#
+ruleview
+-
+toolbar
+-
+container
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
+;
+height
+:
+auto
+;
+}
+#
+ruleview
+-
+toolbar
+{
+display
+:
+flex
+;
+height
+:
+23px
+;
+}
+#
+ruleview
+-
+toolbar
+>
+.
+devtools
+-
+searchbox
+:
+first
+-
+child
+{
+-
+moz
+-
+padding
+-
+start
+:
+0px
+;
+}
+#
+ruleview
+-
+command
+-
+toolbar
+{
+display
+:
+flex
+;
+}
+#
+pseudo
+-
+class
+-
+panel
+{
+display
+:
+flex
+;
+height
+:
+24px
+;
+overflow
+:
+hidden
+;
+transition
+:
+height
+150ms
+ease
+;
+}
+#
+pseudo
+-
+class
+-
+panel
+[
+hidden
+]
+{
+height
+:
+0px
+;
+}
+#
+pseudo
+-
+class
+-
+panel
+>
+label
+{
+-
+moz
+-
+user
+-
+select
+:
+none
+;
+flex
+-
+grow
+:
+1
+;
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
+}
+/
+*
+Rule
+View
+Container
+*
+/
 #
 ruleview
 -
@@ -264,136 +433,6 @@ visibility
 0
 .
 25s
-;
-}
-.
-devtools
--
-sidebar
--
-toolbar
-{
-display
-:
-flex
-;
-}
-#
-pseudo
--
-class
--
-panel
-{
-position
-:
-relative
-;
-margin
--
-top
-:
--
-1px
-;
-margin
--
-bottom
-:
--
-1px
-;
-overflow
--
-y
-:
-hidden
-;
-max
--
-height
-:
-24px
-;
-outline
-:
-0
-!
-important
-;
-transition
--
-property
-:
-max
--
-height
-;
-transition
--
-duration
-:
-150ms
-;
-transition
--
-timing
--
-function
-:
-ease
-;
-}
-#
-pseudo
--
-class
--
-panel
-[
-hidden
-]
-{
-max
--
-height
-:
-0px
-;
-}
-#
-pseudo
--
-class
--
-panel
->
-label
-{
--
-moz
--
-user
--
-select
-:
-none
-;
-flex
--
-grow
-:
-1
-;
-display
-:
-flex
-;
-align
--
-items
-:
-center
 ;
 }
 .
